<resources>
    <string name="app_name">InstaPost</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="count">count</string>
    <string name="name">name</string>
    <string name="centered_via_layout_gravity">Centered via Layout Gravity</string>
    <string name="index">Index</string>
    <string name="Name">Name</string>
    <string name="nickname">NickName</string>
    <string name="description">Description:</string>
    <string name="users_post_images">Users Post Images</string>
    <string name="textview">TextView</string>
    <string name="title_activity_temp">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nick_name">Nick Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="posts">Posts</string>
    <string name="log_out">Log Out</string>
    <string name="username">UserName</string>
    <string name="post">Post</string>
    <string name="write_a_description">Write a Description:</string>
    <string name="users">Users</string>
    <string name="hashtags">Hashtags</string>
    <string name="my_posts">My Posts</string>
    <string name="all_posts">All Posts</string>
    <string name="list_of_users">List of Users</string>
    <string name="list_of_hashtags">List of Hashtags</string>
    <string name="everyone">Everyone</string>
    <string name="instapost">InstaPost</string>
    <string name="back">Back</string>
</resources>
