<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_my_posts"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/my_posts"/>

    <item
            android:id="@+id/navigation_all_posts"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/all_posts"/>

    <item
            android:id="@+id/navigation_users"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/users"/>

    <item
            android:id="@+id/navigation_hashtags"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/hashtags"/>

</menu>
