<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in" app:layout_constraintEnd_toStartOf="@+id/sign_up"
            android:layout_marginEnd="36dp" app:layout_constraintStart_toStartOf="@+id/edit_password"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_password"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" app:layout_constraintEnd_toEndOf="@+id/edit_password"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edit_password"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password" android:layout_marginBottom="108dp"
            app:layout_constraintHorizontal_bias="0.507"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edit_email" android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_password" app:layout_constraintStart_toEndOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_nick_name" android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_email" app:layout_constraintStart_toStartOf="@+id/nickname"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_name" android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_nick_name" app:layout_constraintStart_toStartOf="@+id/name"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name" android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_name" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="96dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email" android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_email" app:layout_constraintStart_toStartOf="@+id/edit_email"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password" android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_password" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="98dp"/>
    <TextView
            android:text="@string/nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nickname" android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_nick_name" app:layout_constraintStart_toStartOf="@+id/edit_name"/>
</android.support.constraint.ConstraintLayout>