<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/back"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0">
        <TextView
                android:text="@string/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/nicknameView" android:layout_marginStart="75dp"/>
        <ImageView
                android:layout_width="251dp"
                android:layout_height="233dp" app:srcCompat="@android:color/darker_gray"
                android:id="@+id/imageView" android:layout_marginStart="75dp"
                android:contentDescription="@string/users_post_images"/>
        <TextView
                android:text="@string/write_a_description"
                android:layout_width="251dp"
                android:layout_height="wrap_content" android:id="@+id/descriptionView" android:layout_marginStart="75dp"
                android:layout_marginEnd="100dp"/>
        <EditText
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/edit_description" android:layout_marginStart="75dp" android:layout_marginEnd="100dp"/>
    </LinearLayout>
    <Button
            android:text="Back"
            android:layout_width="82dp"
            android:layout_height="0dp"
            android:id="@+id/back"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"/>
    <Button
            android:text="Post"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:id="@+id/post" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintVertical_bias="0.01"/>
</android.support.constraint.ConstraintLayout>