<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NavigationActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/linearLayout" android:layout_marginTop="39dp"
            android:layout_marginBottom="3dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/navigation" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <TextView
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" android:textSize="18sp" android:id="@+id/selection"/>
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:name="com.example.assignment4.RecyclerFragment"
                android:id="@+id/recycle_fragment"/>
    </LinearLayout>
    <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/navigation" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
    <Button
            android:text="@string/log_out"
            android:layout_width="76dp"
            android:layout_height="37dp"
            android:id="@+id/logout" android:textSize="12sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75"/>
    <Button
            android:text="@string/post"
            android:layout_width="68dp"
            android:layout_height="38dp"
            android:id="@+id/post" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" android:textSize="12sp"/>

</android.support.constraint.ConstraintLayout>